// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox render - custom placeholder and incremental 1`] = `
<EuiFieldSearch
  defaultValue=""
  fullWidth={true}
  incremental={true}
  inputRef={[Function]}
  isLoading={false}
  onSearch={[Function]}
  placeholder="..."
/>
`;

exports[`SearchBox render - no config 1`] = `
<EuiFieldSearch
  defaultValue=""
  fullWidth={true}
  incremental={false}
  inputRef={[Function]}
  isLoading={false}
  onSearch={[Function]}
  placeholder="Search..."
/>
`;
